--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,40 @@
 <resources>
-    <string name="app_name">path</string>
+    <string name="app_name">Path</string>
+    <string name="hints_roll_no">Roll no.</string>
+    <string name="hints_student_name">Student Name</string>
+
+    <string-array name="gender_dropdown_array">
+        <item>Please choose</item>
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+
+    <string-array name="grade_array">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
+    <string-array name="section_array">
+        <item>A</item>
+        <item>B</item>
+        <item>C</item>
+        <item>D</item>
+        <item>E</item>
+    </string-array>
+
+    <string-array name="app_locale">
+        <item>English</item>
+        <item>Hindi (हिंदी)</item>
+        <item>Tamil (தமிழ்்)</item>
+    </string-array>
+
+    <!-- Firebase C4C T4I App Setings -->
+    <string name="ApplicationName">c4c-t4i</string>
+    <string name="ServerClientId">338211353991-urcc5h7gfd5qoppndv23a2vkqb5f6m1e.apps.googleusercontent.com</string>
+    <string name="ApiKey">AIzaSyBNUiwOjLnILeorZzGbZ-Gy787zCfi0Ef8</string>
+    <string name="ApplicationId">1:338211353991:android:1ef65a1e5ea1f998</string>
+    <string name="DatabaseUrl">https://c4c-t4i.firebaseio.com</string>
 </resources>
