language and gender change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,7 @@
 
     <!--Shared Preference-->
     <string name="userIdSharedPref" />
+    <string name="maleRadio">Male</string>
+    <string name="femaleRadio">Female</string>
 
 </resources>
