--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hints_student_name">Student Name</string>
 
     <string-array name="gender_dropdown_array">
-        <item>Please choose</item>
+        <item>Select</item>
         <item>Male</item>
         <item>Female</item>
     </string-array>
@@ -51,5 +51,8 @@
     <string name="userState">userState</string>
     <string name="userCity">userCity</string>
     <string name="userSchool">userSchool</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
